dodalam css animacji

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="main-grid">
-        <div class="main-border"><img src="./IMG/1.jpg" alt=""></div>
+        <div class="main-border" class="1anim"><img src="./IMG/1.jpg" alt=""></div>
         <div class="main-border"><img src="./IMG/2.jpg" alt=""></div>
         <div class="main-border"><img src="./IMG/3.jpg" alt=""></div>
         <div class="main-border"><img src="./IMG/4.jpg" alt=""></div>
