--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 
 <body>
     <div class="main-grid">
-        <div class="main-border" class="1anim"><img src="./IMG/1.jpg" alt=""></div>
-        <div class="main-border"><img src="./IMG/2.jpg" alt=""></div>
-        <div class="main-border"><img src="./IMG/3.jpg" alt=""></div>
-        <div class="main-border"><img src="./IMG/4.jpg" alt=""></div>
-        <div class="main-border"><img src="./IMG/5.jpg" alt=""></div>
-        <div class="main-border"><img src="./IMG/6.jpg" alt=""></div>
-        <div class="main-border"><img src="./IMG/7.JPG" alt=""></div>
-        <div class="main-border"><img src="./IMG/8.jpg" alt=""></div>
-        <div class="main-border"><img src="./IMG/9.jpg" alt=""></div>
-        <div class="main-border"><img src="./IMG/10.jpg" alt=""></div>
-        <div class="main-border"><img src="./IMG/11.jpeg" alt=""></div>
-        <div class="main-border"><img src="./IMG/12.jpg" alt=""></div>
+        <div class="main-border"><img class="przyblizenie" src="./IMG/1.jpg" alt=""></div>
+        <div class="main-border"><img class="oddalanie" src="./IMG/2.jpg" alt=""></div>
+        <div class="main-border"><img class="obrot" src="./IMG/3.jpg" alt=""></div>
+        <div class="main-border"><img class="przyblizenie" src="./IMG/4.jpg" alt=""></div>
+        <div class="main-border"><img class="oddalanie" src="./IMG/5.jpg" alt=""></div>
+        <div class="main-border"><img class="obrot" src="./IMG/6.jpg" alt=""></div>
+        <div class="main-border"><img class="przyblizenie" src="./IMG/7.JPG" alt=""></div>
+        <div class="main-border"><img class="oddalanie" src="./IMG/8.jpg" alt=""></div>
+        <div class="main-border"><img class="obrot" src="./IMG/9.jpg" alt=""></div>
+        <div class="main-border"><img class="przyblizenie" src="./IMG/10.jpg" alt=""></div>
+        <div class="main-border"><img class="oddalanie" src="./IMG/11.jpeg" alt=""></div>
+        <div class="main-border"><img class="obrot" src="./IMG/12.jpg" alt=""></div>
     </div>
 </body>
 
